modules/vnet/main.tf
# Creates Virtual Network 
resource "azurerm_virtual_network" "vnet" {
  name                = "${var.prefix}-vnet"
  location            = var.location
  address_space       = var.vnet-cidr
  resource_group_name = var.rg-name
}

# Creates public subnet within the Virtual Network for VM
resource "azurerm_subnet" "pub" {
  name                 = "${var.prefix}-pub-subnet"
  resource_group_name  = var.rg-name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = var.pub-subnet-cidr
}

# Creates a Public IP for NIC assigned to Kali VM
resource "azurerm_public_ip" "kali" {
  name                = "${var.prefix}-kali-public-ip"
  resource_group_name = var.rg-name
  location            = var.location
  allocation_method   = "Dynamic"
}

# Creates a Public IP for NIC assigned to Windows VM
resource "azurerm_public_ip" "win" {
  name                = "${var.prefix}-win-public-ip"
  resource_group_name = var.rg-name
  location            = var.location
  allocation_method   = "Dynamic"
}

# Creates NIC for Kali VM to connect to Public subnet
resource "azurerm_network_interface" "kali" {
  name                = "${var.prefix}-kali-nic"
  location            = var.location
  resource_group_name = var.rg-name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.pub.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.kali.id
  }
}

# Creates NIC for Windows VM to connect to Public subnet
resource "azurerm_network_interface" "win" {
  name                = "${var.prefix}-win-nic"
  location            = var.location
  resource_group_name = var.rg-name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.pub.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.win.id
  }
}

# Creates Network Security Group and Rules to allow appropriate ports to Kali VM
resource "azurerm_network_security_group" "pub" {
  name                = "${var.prefix}-pub-sg"
  location            = var.location
  resource_group_name = var.rg-name
}

# resource "azurerm_network_security_rule" "http" {
#   name                        = "${var.prefix}-http-sg-rule"
#   priority                    = 100
#   direction                   = "Inbound"
#   access                      = "Allow"
#   protocol                    = "Tcp"
#   source_port_range           = "*"
#   destination_port_range      = "80"
#   source_address_prefix       = "*"
#   destination_address_prefix  = "*"
#   resource_group_name         = var.rg-name
#   network_security_group_name = azurerm_network_security_group.pub.name
# }

# resource "azurerm_network_security_rule" "https" {
#   name                        = "${var.prefix}-https-sg-rule"
#   priority                    = 200
#   direction                   = "Inbound"
#   access                      = "Allow"
#   protocol                    = "Tcp"
#   source_port_range           = "*"
#   destination_port_range      = "443"
#   source_address_prefix       = "*"
#   destination_address_prefix  = "*"
#   resource_group_name         = var.rg-name
#   network_security_group_name = azurerm_network_security_group.pub.name
# }

resource "azurerm_network_security_rule" "ssh" {
  name                        = "${var.prefix}-ssh-sg-rule"
  priority                    = 300
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = var.rg-name
  network_security_group_name = azurerm_network_security_group.pub.name
}

resource "azurerm_network_security_rule" "rdp" {
  name                        = "${var.prefix}-rdp-sg-rule"
  priority                    = 400
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "3389"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = var.rg-name
  network_security_group_name = azurerm_network_security_group.pub.name
}

resource "azurerm_network_interface_security_group_association" "kali" {
  network_interface_id      = azurerm_network_interface.kali.id
  network_security_group_id = azurerm_network_security_group.pub.id
}

resource "azurerm_network_interface_security_group_association" "win" {
  network_interface_id      = azurerm_network_interface.win.id
  network_security_group_id = azurerm_network_security_group.pub.id
}
